--- a/Commune Waitlist Page/index.html
+++ b/Commune Waitlist Page/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Commune Waitlist Page</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="page-wrapper">
@@ -18,22 +29,44 @@
           <div class="contin">Affiliates</div>
           <div class="contin">Pricing</div>
           <div class="contin">Communities</div>
-          <button class="contin" style="background-color: #483285; border-radius: 5px; color: aliceblue;">Join Waitlist</button>
+          <button
+            class="contin"
+            style="
+              background-color: #483285;
+              border-radius: 5px;
+              color: aliceblue;
+            "
+          >
+            Join Waitlist
+          </button>
         </div>
       </div>
-      <div>
-        <h3 class="filled_box">
-          We are now allowing early-access for users. <a href="">Learn more.</a>
-        </h3>
-        <h1 class="build_a">Build a highly engaged <br>community with no effort.</h1>
-        <p>
-          Commune offers the tools you need to build a highly engaged community
-          with little to no effort. <br>Simply setup your Commune workspace, and
-          manage everything from members to content from <br>one central dashboard.
-        </p>
-        <input type="text" placeholder="Enter your e-mail address" />
-        <button class="waitlist_button">Join Waitlist</button>
-      </div>
+      <main class="main">
+        <div>
+          <h3 class="filled_box">
+            We are now allowing early-access for users.
+            <a href=""><strong>Learn more.</strong></a>
+          </h3>
+          <h1 class="build_a">
+            Build a highly engaged <br />community with no effort.
+          </h1>
+          <p>
+            Commune offers the tools you need to build a highly engaged
+            community with little to no effort. <br />Simply setup your Commune
+            workspace, and manage everything from members to content from
+            <br />one central dashboard.
+          </p>
+          <input type="text" placeholder="Enter your e-mail address" />
+          <button class="waitlist_button">Join Waitlist</button>
+        </div>
+        <div>
+          <img
+            src="./Assets/Illustration.png"
+            alt="Flower Illustration"
+            class="illustration"
+          />
+        </div>
+      </main>
       <footer>
         <h4>Used by these companies:</h4>
         <div class="circles">
