--- a/Unifeed Blog Template/index.html
+++ b/Unifeed Blog Template/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unifeed</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <img src="./Assets/Logo.svg" alt="Unifeed Logo" />
+      </div>
+      <div class="hero">
+        <div class="heroes">Home</div>
+        <div class="heroes">Features</div>
+        <div class="heroes">Pricing</div>
+        <div class="subscribe">Subscribe</div>
+      </div>
+    </header>
+
+    <main class="main_article">
+      <div>
+        <img
+          src="./Assets/Main Article Image.png"
+          alt="Main Article"
+          class="article"
+        />
+      </div>
+      <div class="weekly">
+        <h1>Weekly Newsletter: Tweets for Higher Engagements</h1>
+        <h4 style="font-weight: lighter">
+          In this weely newsletter, we will be covering ten types of engaging
+          tweets. This is the guide if you're just starting out on Twitter.
+        </h4>
+        <div class="user_avatar">
+          <img src="./Assets/User Avatar.png" alt="User Avatar" />
+          <div class="jessica">
+            <h3 style="font-weight: lighter">
+              <strong>Jessica Andrews</strong> <br />
+              Content Manager
+            </h3>
+          </div>
+        </div>
+      </div>
+    </main>
+    <div>
+      <div>
+        <img src="./Assets/Article 1 Image.png" alt="Article 1 Image" />
+        <h1>7 Tips for Organic Traffic</h1>
+        <p>
+          From SEO to integrating with Paid advertising, this article covers it
+          all.
+        </p>
+        <div>
+          <img src="./Assets/User Avatar-1.png" alt="User Avatar 1" />
+          <div>
+            <h3><strong>Spencer David</strong></h3>
+            <h3>SEO Specialist</h3>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="./Assets/Article 2 Image.png" alt="Article 2 Image" />
+        <h1>How To Start Your Own Business</h1>
+        <p>Staring your own business in 2024 has never been easier.</p>
+        <div>
+          <img src="./Assets/User Avatar-2.png" alt="User Avatar 2" />
+          <div>
+            <h3><strong>Sara Frey</strong></h3>
+            <h3>Business Leader</h3>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="./Assets/Article 3 Image.png" alt="Article 3 Image" />
+        <h1>5 Tips for Better Branding</h1>
+        <p>
+          From SEO to integrating with Paid Advertising, this article covers it
+          all.
+        </p>
+        <div>
+          <img src="./Assets/User Avatar-3.png" alt="User Avatar 3" />
+          <div>
+            <h3><strong>David Suns</strong></h3>
+            <h3>Brand Manager</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div><img src="./Assets/Logo.svg" alt="Unifeed Logo" /></div>
+      <div><p>Unifeed © 2024 All Copyrights Reserved</p></div>
+    </footer>
+  </body>
 </html>
