changed atlassian a tag

--- a/Commune Waitlist Page/index.html
+++ b/Commune Waitlist Page/index.html
@@ -70,7 +70,7 @@
       <footer>
         <h4>Used by these companies:</h4>
         <div class="circles">
-          <img src="./Assets/Atlassian Icon.svg" alt="Atlassian" />
+          <a href="https://www.atlassian.com/software/jira"><img src="./Assets/Atlassian Icon.svg" alt="Atlassian jira"></a>
           <img src="./Assets/Behance Icon.svg" alt="Behance" />
           <img src="./Assets/Bing Icon.svg" alt="Bing" />
           <img src="./Assets/Bitbucket Icon.svg" alt="Bitbucket" />
