--- a/Unifeed Blog Template/index.html
+++ b/Unifeed Blog Template/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unifeed</title>
+    <title>Unifeed Blog</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -55,10 +55,10 @@
             />
           </div>
           <div class="tips_7">
-            <h1>7 Tips for Organic <br>Traffic</h1>
+            <h1>7 Tips for Organic <br />Traffic</h1>
             <h4 style="font-weight: lighter">
-              From SEO to integrating with Paid <br>Advertising, this article covers
-              it all.
+              From SEO to integrating with Paid Advertising, <br />this article
+              covers it all.
             </h4>
             <div class="user_avatar">
               <img src="./Assets/User Avatar-1.png" alt="User Avatar" />
@@ -71,12 +71,61 @@
             </div>
           </div>
         </div>
+        <div class="article1">
+          <div class="article11">
+            <img
+              src="./Assets/Article 2 Image.png"
+              alt="Main Article"
+              class="article"
+            />
+          </div>
+          <div class="tips_7">
+            <h1>How To Start Your <br />Own Business</h1>
+            <h4 style="font-weight: lighter">
+              Starting your own business in 2021 has never been easier.
+            </h4>
+            <div class="user_avatar">
+              <img src="./Assets/User Avatar-2.png" alt="User Avatar" />
+              <div class="jessica">
+                <h3 style="font-weight: lighter">
+                  <strong>Sara Frey</strong> <br />
+                  Business Leader
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="article1">
+          <div class="article11">
+            <img
+              src="./Assets/Article 3 Image.png"
+              alt="Main Article"
+              class="article"
+            />
+          </div>
+          <div class="tips_7">
+            <h1>5 Tips for Better <br />Branding</h1>
+            <h4 style="font-weight: lighter">
+              From SEO to integrating with Paid Advertising, this article
+              covers it all.
+            </h4>
+            <div class="user_avatar">
+              <img src="./Assets/User Avatar-3.png" alt="User Avatar" />
+              <div class="jessica">
+                <h3 style="font-weight: lighter">
+                  <strong>David Suns</strong> <br />
+                  Brand Manager
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
     <footer>
-      <div><img src="./Assets/Logo.svg" alt="Unifeed Logo" /></div>
-      <div><p>Unifeed © 2024 All Copyrights Reserved</p></div>
+      <img src="./Assets/Logo.svg" alt="Unifeed Logo" />
+      <p>Unifeed © 2024 All Copyrights Reserved</p>
     </footer>
   </body>
 </html>
